# hector_quadrotor

./: .gitignore  LICENSE.txt  hector_quadrotor.rosinstall  stack.xml  tutorials.rosinstall
hector_quadrotor/: CHANGELOG.rst  CMakeLists.txt  package.xml  stack.xml
hector_quadrotor/hector_quadrotor_gazebo/: manifest.xml
hector_quadrotor/hector_quadrotor_gazebo_plugins/: manifest.xml
hector_quadrotor/hector_quadrotor_teleop/: manifest.xml
hector_quadrotor/hector_quadrotor_urdf/: mainpage.dox
hector_quadrotor_actions/: CMakeLists.txt  package.xml
hector_quadrotor_actions/launch/: actions.launch
hector_quadrotor_actions/src/: landing_action.cpp  pose_action.cpp  takeoff_action.cpp
hector_quadrotor_controller/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  plugin.xml  pose_controller_plugin.xml
hector_quadrotor_controller/launch/: controller.launch
hector_quadrotor_controller/matlab/: CMakeLists.txt  compile_all.m  motorspeed.m  parameter_QK_propulsion.m  quadrotorPropulsion.m
hector_quadrotor_controller/param/: quadrotor_aerodynamics.yaml  quadrotor_propulsion.yaml  robbe_2827-34_epp1045.yaml  robbe_2827-34_epp1245.yaml
hector_quadrotor_controller/params/: controller.yaml  pose_controller.yaml
hector_quadrotor_controller/src/: motor_controller.cpp  pid.cpp  pose_controller.cpp  pose_controller_node.cpp  quadrotor_aerodynamics.cpp  quadrotor_hardware.cpp  quadrotor_interface.cpp  quadrotor_propulsion.cpp  quadrotor_simple_controller.cpp  test_trajectory.cpp  twist_controller.cpp
hector_quadrotor_controller/urdf/: CMakeLists.txt  model_based_navigation.gazebo.xacro  model_based_navigation.urdf.xacro  quadrotor_aerodynamics.gazebo.xacro  quadrotor_aerodynamics.urdf.xacro  quadrotor_controller.gazebo.xacro  quadrotor_controller.urdf.xacro  quadrotor_plugins.urdf.xacro.in  quadrotor_pose_estimation.gazebo.xacro  quadrotor_pose_estimation.urdf.xacro  quadrotor_propulsion.urdf.xacro  quadrotor_simple_controller.urdf.xacro
hector_quadrotor_controller_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml  quadrotor_controller_gazebo.xml
hector_quadrotor_controller_gazebo/src/: quadrotor_hardware_gazebo.cpp
hector_quadrotor_controllers/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml
hector_quadrotor_controllers/launch/: controller.launch
hector_quadrotor_controllers/params/: controller.yaml  limits.yaml  params.yaml
hector_quadrotor_controllers/src/: attitude_controller.cpp  position_controller.cpp  velocity_controller.cpp
hector_quadrotor_demo/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_quadrotor_demo/launch/: indoor_slam_gazebo.launch  outdoor_flight_gazebo.launch
hector_quadrotor_demo/rviz_cfg/: indoor_slam.rviz  indoor_slam.vcg  outdoor_flight.rviz  outdoor_flight.vcg
hector_quadrotor_description/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_quadrotor_description/launch/: xacrodisplay_quadrotor_base.launch
hector_quadrotor_description/urdf/: quadrotor.gazebo.xacro  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_downward_cam.gazebo.xacro  quadrotor_downward_cam.urdf.xacro  quadrotor_hokuyo_utm30lx.gazebo.xacro  quadrotor_hokuyo_utm30lx.urdf.xacro  quadrotor_with_asus.gazebo.xacro  quadrotor_with_asus.urdf.xacro  quadrotor_with_asus_with_hokuyo_utm30lx.gazebo.xacro  quadrotor_with_asus_with_hokuyo_utm30lx.urdf.xacro  quadrotor_with_cam.gazebo.xacro  quadrotor_with_cam.urdf.xacro  quadrotor_with_kinect.gazebo.xacro  quadrotor_with_kinect.urdf.xacro
hector_quadrotor_gazebo/: .gitignore  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_quadrotor_gazebo/launch/: quadrotor_empty_world.launch  spawn_quadrotor.launch  spawn_quadrotor_slam.launch  spawn_quadrotor_with_asus.launch  spawn_quadrotor_with_asus_with_laser.launch  spawn_quadrotor_with_cam.launch  spawn_quadrotor_with_downward_cam.launch  spawn_quadrotor_with_kinect.launch  spawn_quadrotor_with_laser.launch  spawn_two_quadrotors.launch  test_gazebo.launch
hector_quadrotor_gazebo/urdf/: CMakeLists.txt  quadrotor_aerodynamics.gazebo.xacro  quadrotor_controller.gazebo.xacro  quadrotor_plugins.gazebo.xacro.in  quadrotor_plugins.urdf.xacro.in  quadrotor_propulsion.gazebo.xacro  quadrotor_rtt_controller.gazebo.xacro  quadrotor_rtt_plugin.gazebo.xacro  quadrotor_rtt_pose_estimation.gazebo.xacro  quadrotor_sensors.gazebo.xacro  quadrotor_sensors.urdf.xacro  quadrotor_simple_controller.gazebo.xacro
hector_quadrotor_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_quadrotor_gazebo_plugins/src/: gazebo_quadrotor_aerodynamics.cpp  gazebo_quadrotor_propulsion.cpp  gazebo_quadrotor_simple_controller.cpp  gazebo_ros_baro.cpp  quadrotor_simple_controller.cpp
hector_quadrotor_gazebo_plugins/urdf/: quadrotor_simple_controller.urdf.xacro
hector_quadrotor_interface/: CMakeLists.txt  package.xml
hector_quadrotor_interface/src/: helpers.cpp  quadrotor_interface.cpp
hector_quadrotor_model/: .gitignore  CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
hector_quadrotor_model/matlab/: CMakeLists.txt  parameter_QK_propulsion.m  quadrotorDrag.m
hector_quadrotor_model/param/: quadrotor_aerodynamics.yaml  robbe_2827-34_epp1045.yaml  robbe_2827-34_epp1245.yaml
hector_quadrotor_model/src/: matlab_helpers.h  quadrotor_aerodynamics.cpp  quadrotor_propulsion.cpp
hector_quadrotor_pose_estimation/: CHANGELOG.rst  CMakeLists.txt  hector_quadrotor_pose_estimation_nodelets.xml  manifest.xml  package.xml
hector_quadrotor_pose_estimation/params/: simulation.yaml
hector_quadrotor_pose_estimation/src/: main.cpp  pose_estimation_node.cpp  pose_estimation_nodelet.cpp
hector_quadrotor_teleop/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_quadrotor_teleop/launch/: logitech_gamepad.launch  xbox_controller.launch
hector_quadrotor_teleop/src/: quadrotor_teleop.cpp
hector_uav_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
(+90 files in other folders)
