<package>build_depend
  <name>hector_quadrotor_controllers</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <license>BSD</license>

  <author email="pbovbel@clearpathrobotics.com">Paul Bovbel</author>
  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>hector_quadrotor_interface</build_depend>
  <build_depend>hector_uav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>control_toolbox</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>hector_quadrotor_interface</run_depend>
  <run_depend>hector_uav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>

</package>
